# Rho

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  NEWS.md  README.md  Rho-implementation-plan.md
.agents/skills/operate-rho-runtime/: SKILL.md
.agents/skills/operate-rho-runtime/agents/: openai.yaml
.agents/skills/operate-rho-runtime/references/: workbench-protocol.md
.claude/skills/rho-runtime/: SKILL.md
.codex/: config.toml
crates/rho-cli/: Cargo.toml
crates/rho-cli/src/: bootstrap.rs  lib.rs  main.rs
crates/rho-core/src/: lib.rs
crates/rho-kernel/src/: lib.rs
crates/rho-mcp/: Cargo.toml
crates/rho-mcp/src/: lib.rs  main.rs
crates/rho-protocol/: Cargo.toml
crates/rho-protocol/src/: lib.rs  workbench.rs
crates/rho-runtime-deps/: Cargo.toml
crates/rho-runtime-deps/src/: lib.rs
crates/rho-server/: Cargo.toml
crates/rho-server/src/: api.rs  coordinator.rs  execution.rs  gateway.rs  lib.rs  main.rs  policy.rs  runtime.rs
crates/rho-store/src/: lib.rs
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  project.rs
docs/: 0.2x-agent-handoff.md  IMPLEMENTATION_TODO_AGENT_FIRST.md  ROADMAP_AGENT_FIRST_REARCHITECTURE.md  agent-setup.md  development-roadmap.md  phase-0-status.md  remote-runtime.md  windows-build-environment.md  windows-prototype.md
docs/decisions/: ADR-010-agent-first-product-boundary.md  README.md
docs/integrations/: agent-workflows.md
docs/plans/: 2026-07-16-wp3-structured-runs-problems-recovery-design.md
integrations/claude-code/rho/: .mcp.json  README.md
integrations/claude-code/rho/.claude-plugin/: plugin.json
integrations/claude-code/rho/skills/rho-runtime/: SKILL.md
integrations/claude-code/rho/skills/rho-runtime/references/: workbench-protocol.md
integrations/codex/: marketplace.json
integrations/codex/plugins/rho/.codex-plugin/: plugin.json
integrations/codex/plugins/rho/skills/operate-rho-runtime/: SKILL.md
integrations/codex/plugins/rho/skills/operate-rho-runtime/agents/: openai.yaml
integrations/codex/plugins/rho/skills/operate-rho-runtime/references/: workbench-protocol.md
integrations/templates/: AGENTS.md
r/rho.agent/R/: aaa-state.R  aisdk_adapter.R
r/rho.agent/tests/testthat/: test-adapter.R
r/rho.bridge/: DESCRIPTION
r/rho.bridge/R/: state.R  workspace.R
r/rho.bridge/tests/testthat/: test-workspace.R
runtime/: ark.json  dependencies.json
scripts/: bootstrap-ark-windows.ps1  build-windows-installer.ps1  serve-desktop-preview.mjs
web/: app.js  index.html  styles.css
