[workspace]
resolver = "2"
members = [
  "crates/rho-protocol",
  "crates/rho-store",
  "crates/rho-kernel",
  "crates/rho-agent-transport",
  "crates/rho-core",
  "crates/rho-server",
  "desktop/src-tauri",
]
exclude = ["vendor/jet"]

[workspace.package]
version = "0.2.0-dev.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/YuLab-SMU/Rho"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
jet_core = { path = "vendor/jet/crates/core" }
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
