[workspace]
resolver = "2"
members = [
  "crates/rho-protocol",
  "crates/rho-store",
  "crates/rho-kernel",
  "crates/rho-runtime-deps",
  "crates/rho-agent-transport",
  "crates/rho-core",
  "crates/rho-cli",
  "crates/rho-mcp",
  "crates/rho-server",
  "desktop/src-tauri",
]
exclude = ["vendor/jet"]

[workspace.package]
version = "0.2.0-dev.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/YuLab-SMU/Rho"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["json", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
futures-util = "0.3.32"
fs4 = "1.1"
jet_core = { path = "vendor/jet/crates/core" }
rand = "0.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tower = { version = "0.5.3", features = ["util"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
zip = { version = "6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
