[package]
name = "rho-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rho"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
rho-protocol = { path = "../rho-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
rho-server = { path = "../rho-server" }
tempfile.workspace = true
