[package]
name = "rho-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rho-cli = { path = "../rho-cli" }
rho-protocol = { path = "../rho-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
rho-server = { path = "../rho-server" }
tempfile.workspace = true
