[package]
name = "rho-runtime-deps"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
fs4.workspace = true
reqwest.workspace = true
rho-protocol = { path = "../rho-protocol" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
