[package]
name = "rho-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
rho-kernel = { path = "../rho-kernel" }
rho-agent-transport = { path = "../rho-agent-transport" }
rho-core = { path = "../rho-core" }
rho-mcp = { path = "../rho-mcp" }
rho-protocol = { path = "../rho-protocol" }
rho-runtime-deps = { path = "../rho-runtime-deps" }
rho-store = { path = "../rho-store" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
