[package]
name = "rho-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
rho-core = { path = "../../crates/rho-core" }
rho-kernel = { path = "../../crates/rho-kernel" }
rho-protocol = { path = "../../crates/rho-protocol" }
rho-server = { path = "../../crates/rho-server" }
rho-store = { path = "../../crates/rho-store" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tokio.workspace = true
uuid.workspace = true
