[package]
name = "rho-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
rho-server = { path = "../../crates/rho-server" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
